# ehyo

./: .dockerignore  .gitignore  .npmrc  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  railway.toml  tsconfig.json
.claude/agents/: README.md  aesthetic-reviewer.md  backend-architect.md  fretboard-renderer.md  music-theory-guardian.md  nextjs-architect.md  test-strategist.md  web-audio-engineer.md
.github/workflows/: ci.yml  deploy.yml
app/: globals.css  page.tsx
app/(practice)/: layout.tsx
apps/api/: .env.example  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 6fcd3225ece2_sprint10_modal_4bar_progression.py  9e66e712dd72_create_progression_templates.py
apps/api/app/: config.py  main.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: __init__.py  progression_template.py
apps/api/app/routers/: health.py  progression_templates.py
apps/api/app/schemas/: progression_template.py
apps/api/app/scripts/: seed.py
apps/api/tests/: conftest.py  test_alembic_sprint10_migration.py  test_health.py  test_progression_templates.py
apps/web/: next.config.ts  package.json  postcss.config.mjs  tsconfig.json  vitest.config.ts
components/fretboard/: Fretboard.tsx  FretboardClient.tsx  FretboardNote.tsx  FretboardOptions.tsx  ImportantDegreesToggle.tsx  RootPicker.tsx  (+1 more)
docker/: api.Dockerfile  web.Dockerfile
docs/: phase5-prep.md  planning.md
tests/: README.md  audio-helpers.ts  setup.ts
(+187 files in other folders)
