[project]
name = "music-app-api"
version = "0.1.0"
description = "FastAPI backend for my-music-app (Phase 5+)"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115",
  "sqlalchemy[asyncio]>=2.0.36",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "pydantic-settings>=2.5",
  "boto3>=1.35",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "testcontainers[postgres]>=4.8",
  "ruff>=0.6",
  "mypy>=1.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
